--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,12 @@
   box-sizing: border-box;
 }
 
+.body {
+  display: flex;
+  flex-direction: row;
+}
+
+.center {
+  display: flex;
+  flex-direction: column;
+}
