--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
  header {
   height: 13vh;
   font-size: 8vh;
-  padding: 1rem 0 0 0;
+  padding: 1vh 0 0 0;
  }
 
 .body {
@@ -36,6 +36,7 @@
   align-items: center;
   width: 40%;
   background: white;
+  border-radius: 25px;
 }
 
 .artist {
@@ -50,6 +51,8 @@
   justify-content: center;
   align-items: center;
   border: solid yellow 1px;
+  color: white;
+  border-radius: 25px;
 }
 
 .artist img {
