--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,26 @@
   flex-direction: column;
   align-items: center;
   width: 30%;
+  font-family: 'Lato', sans-serif;
+}
+
+.roster {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: center;
+  align-items: center;
+  width: 20rem;
+  height: 100%;
+  border: solid black 1px;
+  border-radius: 25px;
+  background-color: #E1D286;
+}
+
+.roster-players img {
+  width: 30%;
+  border-radius: 7px;
+  margin: 2rem 0rem 0rem 0rem;
 }
 
 .center {
@@ -155,6 +175,7 @@ artist h2 {
   flex-direction: column;
   align-items: center;
   width: 30%;
+  font-family: 'Lato', sans-serif;
 }
 
 .bios {
